...
    Icon(
        painter = painterResource(R.drawable.ic_heart_full),
        modifier = Modifier
            .width(24.dp)
            .height(24.dp)
            .clickable { onClick(post_id) }
            .testTag("heart_full")
        ,
        contentDescription = "heart_full",
        tint = MainColor,
    )
}

...
    Icon(
        painter = painterResource(R.drawable.ic_heart_empty),
        modifier = Modifier
            .width(24.dp)
            .height(24.dp)
            .clickable { onClick(post_id) }
            .testTag("heart_empty")
        ,
        contentDescription = "heart_empty",
        tint = MainColor
    )
}

...


@Preview
@Composable
fun PreviewCustomButton() {
    EatAndTellTheme {
        CustomButton(onClick = { /**/ }, text = "태그 갱신", containerColor = Gray, borderColor = White)
    }
}


@Composable
fun MediumRedButton(onClick: () -> Unit, text: String, enable: Boolean = true) {
...
    }
}
@Preview
@Composable
fun PreviewMediumRedButton() {
    EatAndTellTheme {
        MediumRedButton(onClick = { /**/ }, text = "팔로우하기")
    }
}
@Composable
fun LargeRedButton(onClick: () -> Unit, text: String, enable: Boolean = true) {
    Button(
        onClick = {if (enable) onClick() else { /**/ }},
...
    Row(
        verticalAlignment = Alignment.CenterVertically,
        horizontalArrangement = Arrangement.spacedBy(12.dp),
        modifier = Modifier
            .padding(4.dp)
            .clickable(onClick = onClick)
            .testTag("profile_row")
    ) {
        ProfileImage(profileUrl = profileUrl)
        ProfileText(username = username, userDescription = userDescription)
    }
}
@Composable
...
        painter = painterResource(R.drawable.ic_home),
        modifier = Modifier
            .padding(1.dp)
            .width(24.dp)
            .height(24.dp)
            .clickable(onClick = onClick)
            .testTag("go_to_home"),
        contentDescription = "Home",
        tint = Black
    )
}

@Composable
...
        painter = painterResource(R.drawable.ic_plus_circle),
        modifier = Modifier
            .padding(1.dp)
            .width(24.dp)
            .height(24.dp)
            .clickable(onClick = onClick)
            .testTag("go_to_upload"),
    contentDescription = "plus_circle",
        tint = Black
    )
}
@Composable
fun SearchRefraction(onClick: () -> Unit) {
...
        painter = painterResource(R.drawable.ic_search_refraction),
        modifier = Modifier
            .padding(1.dp)
            .width(24.dp)
            .height(24.dp)
            .clickable(onClick = onClick)
            .testTag("go_to_search"),
        contentDescription = "search_refraction",
        tint = Black
    )
}

@Composable
...
        imageVector = Icons.Outlined.Person,
        modifier = Modifier
            .padding(1.dp)
            .width(24.dp)
            .height(24.dp)
            .clickable(onClick = onClick)
            .testTag("go_to_profile"),
        contentDescription = "my_home",
        tint = Black
    )
}


...
