...
                        onClick = {
                            expanded = true
                        },
                        text = buttonText,
                        containerColor = White,
                        borderColor = PaleGray,
                        testTag = "unfollow_button"
                    )

                    DropdownMenu(
                        expanded = expanded,
                        onDismissRequest = { expanded = false },
                        offset = DpOffset(x = 0.dp, y = with(LocalDensity.current) { 6.dp })
                    ) {
                        DropdownMenuItem(
                            text = { Text("팔로우 취소", modifier = Modifier.fillMaxWidth(),textAlign = TextAlign.Center)},
                            onClick = { onClick(); expanded = false },
                            modifier = Modifier.height(28.dp).width(100.dp)
                        )
                    }
                }
            }
...
