...
            ) {

                // Restaurant Name or Button
                if (restaurantName.text.isEmpty()) {
                    MediumWhiteButton(
                        onClick = { navController.navigate("SearchRest") },
                        text = "식당 검색"
                    )
                } else {
                    Text(text = restaurantName.text,
                        style = TextStyle(
                            fontSize = 16.sp,
                            lineHeight = 21.sp,
...
