...
                onClick = {
                    navController.navigate("login")
                    viewModel.resetStates()
                          },
                text = "로그인하기",
                containerColor = Black,
                modifier = Modifier.testTag("go_to_login")
            )

    }
}


...
